--- a/.github/workflows/oneplus_ace5_Ultra.yml
+++ b/.github/workflows/oneplus_ace5_Ultra.yml
@@ -1,9 +1,9 @@
-name: oneplus_ace5_Ultra
+name: oneplus_6t_Ultra
 on:
   workflow_dispatch:
     inputs:
       KERNEL_SUFFIX:
-        description: '内核名称修改(可改中文和emoji)'
+        description: 'AMFNL'
         required: true
         default: '-xiaoxiaow'
       KERNEL_TIME:
@@ -12,18 +12,18 @@ on:
        default: 'Fri Apr 18 19:35:07 UTC 2025'
       enable_feature_x:
        description: "是否启用kpm"
-       required: false
-       default: false
+       required: true
+       default: true
        type: boolean
       enable_feature_y:
        description: "是否启用lz4kd"
-       required: false
-       default: false
+       required: true
+       default: true
        type: boolean
       enable_feature_z:
        description: "是否添加风驰驱动"
-       required: false
-       default: false
+       required: true
+       default: true
        type: boolean
       
 jobs:
@@ -48,8 +48,8 @@ jobs:
           
       - name: Configure Git
         run: |
-         git config --global user.name "Futaba"
-         git config --global user.email "3199167602@qq.com"
+         git config --global user.name "amfnl"
+         git config --global user.email "amfnl@qq.com"
 
       - name: Install dependencies
         run: |
